mote/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> program
Rule 1     program -> program_items
Rule 2     program_items -> program_items program_item
Rule 3     program_items -> program_item
Rule 4     program_item -> import_stmt
Rule 5     program_item -> function_decl
Rule 6     program_item -> struct_decl
Rule 7     program_item -> statement
Rule 8     statement -> variable_decl
Rule 9     statement -> assignment
Rule 10    statement -> if_stmt
Rule 11    statement -> while_stmt
Rule 12    statement -> for_stmt
Rule 13    statement -> return_stmt
Rule 14    statement -> expr_stmt
Rule 15    statement -> block
Rule 16    import_stmt -> IMPORT STRING SEMICOLON
Rule 17    function_decl -> FN ID LPAREN parameters_opt RPAREN block
Rule 18    parameters_opt -> parameters
Rule 19    parameters_opt -> empty
Rule 20    parameters -> ID
Rule 21    parameters -> parameters COMMA ID
Rule 22    struct_decl -> STRUCT ID INDENT struct_fields DEDENT SEMICOLON
Rule 23    struct_fields -> ID COMMA struct_fields
Rule 24    struct_fields -> ID COMMA
Rule 25    struct_fields -> empty
Rule 26    variable_decl -> LET ID ASSIGN expr SEMICOLON
Rule 27    assignment -> assign_target ASSIGN expr SEMICOLON
Rule 28    assign_target -> ID
Rule 29    assign_target -> assign_target DOT ID
Rule 30    assign_target -> assign_target LBRACKET expr RBRACKET
Rule 31    if_stmt -> IF expr block elif_blocks else_block_opt
Rule 32    elif_blocks -> elif_blocks ELIF expr block
Rule 33    elif_blocks -> empty
Rule 34    else_block_opt -> ELSE block
Rule 35    else_block_opt -> empty
Rule 36    while_stmt -> WHILE expr block
Rule 37    for_stmt -> FOR ID IN expr block
Rule 38    return_stmt -> RETURN expr SEMICOLON
Rule 39    return_stmt -> RETURN SEMICOLON
Rule 40    expr_stmt -> expr SEMICOLON
Rule 41    block -> INDENT statement_list DEDENT
Rule 42    statement_list -> statement_list statement
Rule 43    statement_list -> empty
Rule 44    primary_expr -> ID
Rule 45    primary_expr -> literal
Rule 46    primary_expr -> LPAREN expr RPAREN
Rule 47    primary_expr -> struct_literal
Rule 48    primary_expr -> array_literal
Rule 49    postfix_expr -> primary_expr postfix_chain
Rule 50    postfix_chain -> postfix postfix_chain
Rule 51    postfix_chain -> empty
Rule 52    postfix -> LPAREN args_opt RPAREN
Rule 53    postfix -> DOT ID
Rule 54    postfix -> LBRACKET expr RBRACKET
Rule 55    unary_expr -> NOT unary_expr
Rule 56    unary_expr -> MINUS unary_expr
Rule 57    unary_expr -> postfix_expr
Rule 58    exponential_expr -> unary_expr
Rule 59    exponential_expr -> unary_expr POWER exponential_expr
Rule 60    multiplicative_expr -> exponential_expr
Rule 61    multiplicative_expr -> multiplicative_expr TIMES exponential_expr
Rule 62    multiplicative_expr -> multiplicative_expr DIVIDE exponential_expr
Rule 63    multiplicative_expr -> multiplicative_expr MOD exponential_expr
Rule 64    additive_expr -> multiplicative_expr
Rule 65    additive_expr -> additive_expr PLUS multiplicative_expr
Rule 66    additive_expr -> additive_expr MINUS multiplicative_expr
Rule 67    relational_expr -> additive_expr
Rule 68    relational_expr -> relational_expr LT additive_expr
Rule 69    relational_expr -> relational_expr GT additive_expr
Rule 70    relational_expr -> relational_expr LE additive_expr
Rule 71    relational_expr -> relational_expr GE additive_expr
Rule 72    equality_expr -> relational_expr
Rule 73    equality_expr -> equality_expr EQ relational_expr
Rule 74    equality_expr -> equality_expr NE relational_expr
Rule 75    logical_and_expr -> equality_expr
Rule 76    logical_and_expr -> logical_and_expr AND equality_expr
Rule 77    logical_or_expr -> logical_and_expr
Rule 78    logical_or_expr -> logical_or_expr OR logical_and_expr
Rule 79    expr -> logical_or_expr
Rule 80    literal -> INTEGER
Rule 81    literal -> FLOAT
Rule 82    literal -> STRING
Rule 83    literal -> TRUE
Rule 84    literal -> FALSE
Rule 85    literal -> NULL
Rule 86    args_opt -> args
Rule 87    args_opt -> empty
Rule 88    args -> expr
Rule 89    args -> args COMMA expr
Rule 90    struct_literal -> ID LBRACE field_assignments_opt RBRACE
Rule 91    field_assignments_opt -> field_assignments
Rule 92    field_assignments_opt -> empty
Rule 93    field_assignments -> field_assign
Rule 94    field_assignments -> field_assignments COMMA field_assign
Rule 95    field_assign -> ID COLON expr
Rule 96    array_literal -> LBRACKET expr_list_opt RBRACKET
Rule 97    expr_list_opt -> expr_list
Rule 98    expr_list_opt -> empty
Rule 99    expr_list -> expr
Rule 100   expr_list -> expr_list COMMA expr
Rule 101   empty -> <empty>

Terminals, with rules where they appear

AND                  : 76
ASSIGN               : 26 27
COLON                : 95
COMMA                : 21 23 24 89 94 100
DEDENT               : 22 41
DIVIDE               : 62
DOT                  : 29 53
ELIF                 : 32
ELSE                 : 34
EQ                   : 73
FALSE                : 84
FLOAT                : 81
FN                   : 17
FOR                  : 37
GE                   : 71
GT                   : 69
ID                   : 17 20 21 22 23 24 26 28 29 37 44 53 90 95
IF                   : 31
IMPORT               : 16
IN                   : 37
INDENT               : 22 41
INTEGER              : 80
LBRACE               : 90
LBRACKET             : 30 54 96
LE                   : 70
LET                  : 26
LPAREN               : 17 46 52
LT                   : 68
MINUS                : 56 66
MOD                  : 63
NE                   : 74
NEWLINE              : 
NOT                  : 55
NULL                 : 85
OR                   : 78
PLUS                 : 65
POWER                : 59
RBRACE               : 90
RBRACKET             : 30 54 96
RETURN               : 38 39
RPAREN               : 17 46 52
SEMICOLON            : 16 22 26 27 38 39 40
STRING               : 16 82
STRUCT               : 22
TIMES                : 61
TRUE                 : 83
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

additive_expr        : 65 66 67 68 69 70 71
args                 : 86 89
args_opt             : 52
array_literal        : 48
assign_target        : 27 29 30
assignment           : 9
block                : 15 17 31 32 34 36 37
elif_blocks          : 31 32
else_block_opt       : 31
empty                : 19 25 33 35 43 51 87 92 98
equality_expr        : 73 74 75 76
exponential_expr     : 59 60 61 62 63
expr                 : 26 27 30 31 32 36 37 38 40 46 54 88 89 95 99 100
expr_list            : 97 100
expr_list_opt        : 96
expr_stmt            : 14
field_assign         : 93 94
field_assignments    : 91 94
field_assignments_opt : 90
for_stmt             : 12
function_decl        : 5
if_stmt              : 10
import_stmt          : 4
literal              : 45
logical_and_expr     : 76 77 78
logical_or_expr      : 78 79
multiplicative_expr  : 61 62 63 64 65 66
parameters           : 18 21
parameters_opt       : 17
postfix              : 50
postfix_chain        : 49 50
postfix_expr         : 57
primary_expr         : 49
program              : 0
program_item         : 2 3
program_items        : 1 2
relational_expr      : 68 69 70 71 72 73 74
return_stmt          : 13
statement            : 7 42
statement_list       : 41 42
struct_decl          : 6
struct_fields        : 22 23
struct_literal       : 47
unary_expr           : 55 56 58 59
variable_decl        : 8
while_stmt           : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_items
    (2) program_items -> . program_items program_item
    (3) program_items -> . program_item
    (4) program_item -> . import_stmt
    (5) program_item -> . function_decl
    (6) program_item -> . struct_decl
    (7) program_item -> . statement
    (16) import_stmt -> . IMPORT STRING SEMICOLON
    (17) function_decl -> . FN ID LPAREN parameters_opt RPAREN block
    (22) struct_decl -> . STRUCT ID INDENT struct_fields DEDENT SEMICOLON
    (8) statement -> . variable_decl
    (9) statement -> . assignment
    (10) statement -> . if_stmt
    (11) statement -> . while_stmt
    (12) statement -> . for_stmt
    (13) statement -> . return_stmt
    (14) statement -> . expr_stmt
    (15) statement -> . block
    (26) variable_decl -> . LET ID ASSIGN expr SEMICOLON
    (27) assignment -> . assign_target ASSIGN expr SEMICOLON
    (31) if_stmt -> . IF expr block elif_blocks else_block_opt
    (36) while_stmt -> . WHILE expr block
    (37) for_stmt -> . FOR ID IN expr block
    (38) return_stmt -> . RETURN expr SEMICOLON
    (39) return_stmt -> . RETURN SEMICOLON
    (40) expr_stmt -> . expr SEMICOLON
    (41) block -> . INDENT statement_list DEDENT
    (28) assign_target -> . ID
    (29) assign_target -> . assign_target DOT ID
    (30) assign_target -> . assign_target LBRACKET expr RBRACKET
    (79) expr -> . logical_or_expr
    (77) logical_or_expr -> . logical_and_expr
    (78) logical_or_expr -> . logical_or_expr OR logical_and_expr
    (75) logical_and_expr -> . equality_expr
    (76) logical_and_expr -> . logical_and_expr AND equality_expr
    (72) equality_expr -> . relational_expr
    (73) equality_expr -> . equality_expr EQ relational_expr
    (74) equality_expr -> . equality_expr NE relational_expr
    (67) relational_expr -> . additive_expr
    (68) relational_expr -> . relational_expr LT additive_expr
    (69) relational_expr -> . relational_expr GT additive_expr
    (70) relational_expr -> . relational_expr LE additive_expr
    (71) relational_expr -> . relational_expr GE additive_expr
    (64) additive_expr -> . multiplicative_expr
    (65) additive_expr -> . additive_expr PLUS multiplicative_expr
    (66) additive_expr -> . additive_expr MINUS multiplicative_expr
    (60) multiplicative_expr -> . exponential_expr
    (61) multiplicative_expr -> . multiplicative_expr TIMES exponential_expr
    (62) multiplicative_expr -> . multiplicative_expr DIVIDE exponential_expr
    (63) multiplicative_expr -> . multiplicative_expr MOD exponential_expr
    (58) exponential_expr -> . unary_expr
    (59) exponential_expr -> . unary_expr POWER exponential_expr
    (55) unary_expr -> . NOT unary_expr
    (56) unary_expr -> . MINUS unary_expr
    (57) unary_expr -> . postfix_expr
    (49) postfix_expr -> . primary_expr postfix_chain
    (44) primary_expr -> . ID
    (45) primary_expr -> . literal
    (46) primary_expr -> . LPAREN expr RPAREN
    (47) primary_expr -> . struct_literal
    (48) primary_expr -> . array_literal
    (80) literal -> . INTEGER
    (81) literal -> . FLOAT
    (82) literal -> . STRING
    (83) literal -> . TRUE
    (84) literal -> . FALSE
    (85) literal -> . NULL
    (90) struct_literal -> . ID LBRACE field_assignments_opt RBRACE
    (96) array_literal -> . LBRACKET expr_list_opt RBRACKET

    IMPORT          shift and go to state 8
    FN              shift and go to state 10
    STRUCT          shift and go to state 14
    LET             shift and go to state 23
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    RETURN          shift and go to state 29
    INDENT          shift and go to state 15
    ID              shift and go to state 11
    NOT             shift and go to state 40
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 12
    INTEGER         shift and go to state 46
    FLOAT           shift and go to state 47
    STRING          shift and go to state 9
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NULL            shift and go to state 50
    LBRACKET        shift and go to state 30

    program                        shift and go to state 1
    program_items                  shift and go to state 2
    program_item                   shift and go to state 3
    import_stmt                    shift and go to state 4
    function_decl                  shift and go to state 5
    struct_decl                    shift and go to state 6
    statement                      shift and go to state 7
    block                          shift and go to state 13
    variable_decl                  shift and go to state 16
    assignment                     shift and go to state 17
    if_stmt                        shift and go to state 18
    while_stmt                     shift and go to state 19
    for_stmt                       shift and go to state 20
    return_stmt                    shift and go to state 21
    expr_stmt                      shift and go to state 22
    expr                           shift and go to state 24
    assign_target                  shift and go to state 25
    logical_or_expr                shift and go to state 31
    logical_and_expr               shift and go to state 32
    equality_expr                  shift and go to state 33
    relational_expr                shift and go to state 34
    additive_expr                  shift and go to state 35
    multiplicative_expr            shift and go to state 36
    exponential_expr               shift and go to state 38
    unary_expr                     shift and go to state 39
    postfix_expr                   shift and go to state 41
    primary_expr                   shift and go to state 42
    literal                        shift and go to state 43
    struct_literal                 shift and go to state 44
    array_literal                  shift and go to state 45

state 1

    (0) S' -> program .



state 2

    (1) program -> program_items .
    (2) program_items -> program_items . program_item
    (4) program_item -> . import_stmt
    (5) program_item -> . function_decl
    (6) program_item -> . struct_decl
    (7) program_item -> . statement
    (16) import_stmt -> . IMPORT STRING SEMICOLON
    (17) function_decl -> . FN ID LPAREN parameters_opt RPAREN block
    (22) struct_decl -> . STRUCT ID INDENT struct_fields DEDENT SEMICOLON
    (8) statement -> . variable_decl
    (9) statement -> . assignment
    (10) statement -> . if_stmt
    (11) statement -> . while_stmt
    (12) statement -> . for_stmt
    (13) statement -> . return_stmt
    (14) statement -> . expr_stmt
    (15) statement -> . block
    (26) variable_decl -> . LET ID ASSIGN expr SEMICOLON
    (27) assignment -> . assign_target ASSIGN expr SEMICOLON
    (31) if_stmt -> . IF expr block elif_blocks else_block_opt
    (36) while_stmt -> . WHILE expr block
    (37) for_stmt -> . FOR ID IN expr block
    (38) return_stmt -> . RETURN expr SEMICOLON
    (39) return_stmt -> . RETURN SEMICOLON
    (40) expr_stmt -> . expr SEMICOLON
    (41) block -> . INDENT statement_list DEDENT
    (28) assign_target -> . ID
    (29) assign_target -> . assign_target DOT ID
    (30) assign_target -> . assign_target LBRACKET expr RBRACKET
    (79) expr -> . logical_or_expr
    (77) logical_or_expr -> . logical_and_expr
    (78) logical_or_expr -> . logical_or_expr OR logical_and_expr
    (75) logical_and_expr -> . equality_expr
    (76) logical_and_expr -> . logical_and_expr AND equality_expr
    (72) equality_expr -> . relational_expr
    (73) equality_expr -> . equality_expr EQ relational_expr
    (74) equality_expr -> . equality_expr NE relational_expr
    (67) relational_expr -> . additive_expr
    (68) relational_expr -> . relational_expr LT additive_expr
    (69) relational_expr -> . relational_expr GT additive_expr
    (70) relational_expr -> . relational_expr LE additive_expr
    (71) relational_expr -> . relational_expr GE additive_expr
    (64) additive_expr -> . multiplicative_expr
    (65) additive_expr -> . additive_expr PLUS multiplicative_expr
    (66) additive_expr -> . additive_expr MINUS multiplicative_expr
    (60) multiplicative_expr -> . exponential_expr
    (61) multiplicative_expr -> . multiplicative_expr TIMES exponential_expr
    (62) multiplicative_expr -> . multiplicative_expr DIVIDE exponential_expr
    (63) multiplicative_expr -> . multiplicative_expr MOD exponential_expr
    (58) exponential_expr -> . unary_expr
    (59) exponential_expr -> . unary_expr POWER exponential_expr
    (55) unary_expr -> . NOT unary_expr
    (56) unary_expr -> . MINUS unary_expr
    (57) unary_expr -> . postfix_expr
    (49) postfix_expr -> . primary_expr postfix_chain
    (44) primary_expr -> . ID
    (45) primary_expr -> . literal
    (46) primary_expr -> . LPAREN expr RPAREN
    (47) primary_expr -> . struct_literal
    (48) primary_expr -> . array_literal
    (80) literal -> . INTEGER
    (81) literal -> . FLOAT
    (82) literal -> . STRING
    (83) literal -> . TRUE
    (84) literal -> . FALSE
    (85) literal -> . NULL
    (90) struct_literal -> . ID LBRACE field_assignments_opt RBRACE
    (96) array_literal -> . LBRACKET expr_list_opt RBRACKET

    $end            reduce using rule 1 (program -> program_items .)
    IMPORT          shift and go to state 8
    FN              shift and go to state 10
    STRUCT          shift and go to state 14
    LET             shift and go to state 23
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    RETURN          shift and go to state 29
    INDENT          shift and go to state 15
    ID              shift and go to state 11
    NOT             shift and go to state 40
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 12
    INTEGER         shift and go to state 46
    FLOAT           shift and go to state 47
    STRING          shift and go to state 9
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NULL            shift and go to state 50
    LBRACKET        shift and go to state 30

    program_item                   shift and go to state 51
    import_stmt                    shift and go to state 4
    function_decl                  shift and go to state 5
    struct_decl                    shift and go to state 6
    statement                      shift and go to state 7
    block                          shift and go to state 13
    variable_decl                  shift and go to state 16
    assignment                     shift and go to state 17
    if_stmt                        shift and go to state 18
    while_stmt                     shift and go to state 19
    for_stmt                       shift and go to state 20
    return_stmt                    shift and go to state 21
    expr_stmt                      shift and go to state 22
    expr                           shift and go to state 24
    assign_target                  shift and go to state 25
    logical_or_expr                shift and go to state 31
    logical_and_expr               shift and go to state 32
    equality_expr                  shift and go to state 33
    relational_expr                shift and go to state 34
    additive_expr                  shift and go to state 35
    multiplicative_expr            shift and go to state 36
    exponential_expr               shift and go to state 38
    unary_expr                     shift and go to state 39
    postfix_expr                   shift and go to state 41
    primary_expr                   shift and go to state 42
    literal                        shift and go to state 43
    struct_literal                 shift and go to state 44
    array_literal                  shift and go to state 45

state 3

    (3) program_items -> program_item .

    IMPORT          reduce using rule 3 (program_items -> program_item .)
    FN              reduce using rule 3 (program_items -> program_item .)
    STRUCT          reduce using rule 3 (program_items -> program_item .)
    LET             reduce using rule 3 (program_items -> program_item .)
    IF              reduce using rule 3 (program_items -> program_item .)
    WHILE           reduce using rule 3 (program_items -> program_item .)
    FOR             reduce using rule 3 (program_items -> program_item .)
    RETURN          reduce using rule 3 (program_items -> program_item .)
    INDENT          reduce using rule 3 (program_items -> program_item .)
    ID              reduce using rule 3 (program_items -> program_item .)
    NOT             reduce using rule 3 (program_items -> program_item .)
    MINUS           reduce using rule 3 (program_items -> program_item .)
    LPAREN          reduce using rule 3 (program_items -> program_item .)
    INTEGER         reduce using rule 3 (program_items -> program_item .)
    FLOAT           reduce using rule 3 (program_items -> program_item .)
    STRING          reduce using rule 3 (program_items -> program_item .)
    TRUE            reduce using rule 3 (program_items -> program_item .)
    FALSE           reduce using rule 3 (program_items -> program_item .)
    NULL            reduce using rule 3 (program_items -> program_item .)
    LBRACKET        reduce using rule 3 (program_items -> program_item .)
    $end            reduce using rule 3 (program_items -> program_item .)


state 4

    (4) program_item -> import_stmt .

    IMPORT          reduce using rule 4 (program_item -> import_stmt .)
    FN              reduce using rule 4 (program_item -> import_stmt .)
    STRUCT          reduce using rule 4 (program_item -> import_stmt .)
    LET             reduce using rule 4 (program_item -> import_stmt .)
    IF              reduce using rule 4 (program_item -> import_stmt .)
    WHILE           reduce using rule 4 (program_item -> import_stmt .)
    FOR             reduce using rule 4 (program_item -> import_stmt .)
    RETURN          reduce using rule 4 (program_item -> import_stmt .)
    INDENT          reduce using rule 4 (program_item -> import_stmt .)
    ID              reduce using rule 4 (program_item -> import_stmt .)
    NOT             reduce using rule 4 (program_item -> import_stmt .)
    MINUS           reduce using rule 4 (program_item -> import_stmt .)
    LPAREN          reduce using rule 4 (program_item -> import_stmt .)
    INTEGER         reduce using rule 4 (program_item -> import_stmt .)
    FLOAT           reduce using rule 4 (program_item -> import_stmt .)
    STRING          reduce using rule 4 (program_item -> import_stmt .)
    TRUE            reduce using rule 4 (program_item -> import_stmt .)
    FALSE           reduce using rule 4 (program_item -> import_stmt .)
    NULL            reduce using rule 4 (program_item -> import_stmt .)
    LBRACKET        reduce using rule 4 (program_item -> import_stmt .)
    $end            reduce using rule 4 (program_item -> import_stmt .)


state 5

    (5) program_item -> function_decl .

    IMPORT          reduce using rule 5 (program_item -> function_decl .)
    FN              reduce using rule 5 (program_item -> function_decl .)
    STRUCT          reduce using rule 5 (program_item -> function_decl .)
    LET             reduce using rule 5 (program_item -> function_decl .)
    IF              reduce using rule 5 (program_item -> function_decl .)
    WHILE           reduce using rule 5 (program_item -> function_decl .)
    FOR             reduce using rule 5 (program_item -> function_decl .)
    RETURN          reduce using rule 5 (program_item -> function_decl .)
    INDENT          reduce using rule 5 (program_item -> function_decl .)
    ID              reduce using rule 5 (program_item -> function_decl .)
    NOT             reduce using rule 5 (program_item -> function_decl .)
    MINUS           reduce using rule 5 (program_item -> function_decl .)
    LPAREN          reduce using rule 5 (program_item -> function_decl .)
    INTEGER         reduce using rule 5 (program_item -> function_decl .)
    FLOAT           reduce using rule 5 (program_item -> function_decl .)
    STRING          reduce using rule 5 (program_item -> function_decl .)
    TRUE            reduce using rule 5 (program_item -> function_decl .)
    FALSE           reduce using rule 5 (program_item -> function_decl .)
    NULL            reduce using rule 5 (program_item -> function_decl .)
    LBRACKET        reduce using rule 5 (program_item -> function_decl .)
    $end            reduce using rule 5 (program_item -> function_decl .)


state 6

    (6) program_item -> struct_decl .
